# matplotlib-stubs

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint-python.yaml  pytest.yml  release.yaml
docs/: release-checklist.md
src/matplotlib-stubs/: __init__.pyi  _typing.pyi  artist.pyi  axis.pyi  backend_bases.pyi  bezier.pyi  cm.pyi  collections.pyi  colors.pyi  container.pyi  contour.pyi  dates.pyi  dviread.pyi  figure.pyi  font_manager.pyi  ft2font.pyi  gridspec.pyi  image.pyi  lines.pyi  markers.pyi  mathtext.pyi  mlab.pyi  offsetbox.pyi  patches.pyi  path.pyi  patheffects.pyi  pyplot.pyi  quiver.pyi  scale.pyi  spines.pyi  stackplot.pyi  streamplot.pyi  table.pyi  texmanager.pyi  text.pyi  ticker.pyi  transforms.pyi  units.pyi  widgets.pyi
src/matplotlib-stubs/_api/: __init__.pyi
src/matplotlib-stubs/_stubs_utils/: _properties.pyi
src/matplotlib-stubs/axes/: _axes.pyi  _base.pyi  _secondary_axes.pyi
src/matplotlib-stubs/backends/: _backend_gtk.pyi  _backend_pdf_ps.pyi  _backend_tk.pyi  backend_agg.pyi  backend_gtk3.pyi  backend_pdf.pyi  backend_pgf.pyi  backend_ps.pyi  backend_qt.pyi  backend_svg.pyi
src/matplotlib-stubs/cbook/: __init__.pyi
src/matplotlib-stubs/projections/: polar.pyi
src/matplotlib-stubs/style/: __init__.pyi
src/matplotlib-stubs/tri/: triangulation.pyi  triinterpolate.pyi  trirefine.pyi
test/matplotlib/: test_colors.mypy.yml
