[project]
name = "matplotlib-stubs"
dynamic = ["version"]
authors = [{ name = "Bagard Hoel" }]
description = "Unofficial stubs for the matplotlib package."
keywords = ["matplotlib", "stubs"]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
license = { text = "MIT" }
dependencies = ["matplotlib>=3.0", "numpy>=1.21", "pandas>=2.0"]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/hoel-bagard/matplotlib-stubs"
"Bug Tracker" = "https://github.com/hoel-bagard/matplotlib-stubs/issues"

[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[dependency-groups]
build = ["hatch>=1.14.1"]
dev = [
  "pygobject-stubs>=2.12.0",
  "pandas-stubs>=2.0.2.230605",
  "pip-tools>=7.5.0",
  "pre-commit>=3.5.0",
  "pyright>=1.1.403",
  "ruff>=0.12.7",
  "traitlets>=5.14.3",
]
test = ["mypy>=1.14.1", "pytest>=8.3.5", "pytest-mypy-plugins>=3.1.2"]

[tool.hatch.version]
path = "src/matplotlib-stubs/__init__.pyi"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/.pytest_cache", "/build", "/dist", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/matplotlib-stubs"]

[tool.ruff]
select = ["ALL"]
ignore = [
  "A002",   # Shadowing builtins, nothing we can do about that.
  "A003",
  "ANN",    # The stub is too incomplete to use these rules
  "B006",
  "D",
  "FBT",
  "N",
  "PYI021",
]
line-length = 10000

[tool.ruff.per-file-ignores]
"__init__.pyi" = ["F401"]

[tool.ruff.isort]
order-by-type = false

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.pyright]
include = ["src/matplotlib-stubs"]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportMissingTypeArgument = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUndefinedVariable = false
reportIncompatibleMethodOverride = false
reportOverlappingOverload = false
reportIncompleteStub = false
reportIncompatibleVariableOverride = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportFunctionMemberAccess = false
reportPrivateUsage = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--mypy-only-local-stub"

[tool.uv.sources]
matplotlib-stubs = { workspace = true }
